--- a/templates/networkPolicy.yaml
+++ b/templates/networkPolicy.yaml
@@ -15,9 +15,9 @@ spec:
     {{- toYaml .egress | nindent 4 }}
   {{- end }}
   policyTypes: 
-    {{ toYaml .policyTypes | nindent 4 }}  
+    {{- toYaml .policyTypes | nindent 4 }}  
   podSelector: 
-    {{ toYaml .podSelector | nindent 4 }}
+    {{- toYaml .podSelector | nindent 4 }}
 ---
 {{- end }}
 {{- end }}
