--- a/templates/networkPolicy.yaml
+++ b/templates/networkPolicy.yaml
@@ -7,11 +7,11 @@ metadata:
   namespace: {{ .namespace }}
   {{- if .annotations }}
   annotations:
-    {{- toYaml .policyTypes | nindent 4 }}  
+    {{- toYaml .annotations | nindent 4 }}  
   {{- end }}
   {{- if .labels }}
   labels:
-    {{- toYaml .policyTypes | nindent 4 }}  
+    {{- toYaml .labels | nindent 4 }}  
   {{- end }}
 spec:
   {{- if has "Ingress" .policyTypes }}
